Changelog for Miosix np embedded OS

v1.57

v1.56
- Fixed some bugs in EDF scheduler, found by testsuite.
- Adapted testsuite to work with EDF scheduler.
- Removed configuration option EXIT_ON_HEAP_FULL because since STL containers
  are used in the kernel, there is no more choice: if exceptions are enabled
  on heap full malloc returns NULL and operator new throws bad_alloc, while
  if exceptions are disabled on heap full a reboot is performed, to prevent
  undefined behaviour in STL containers due to operator new not throwing.
- Some code cleanup in the Mutex class.
- Fixed a bug in the priority inheritance mechanism, fixed and added
  a test in the testsuite.
- Removed priority_queue.h and associated test in testsuite.
- Modified Mutex class to use the max heap implementation of the STL.
- Improved preemption points for EDF scheduler.
- Modifed Thread::wakeup(). Now it can no longer be called with the kernel
  paused. Added Thread::PKwakeup() that can be called with the kernel paused.
- Added preemption points in Thread::create(), Thread::setPriority() and
  Thread::wakeup(), active if the EDF scheduler is selected.
- Added file tick_interrupt.h with inline function IRQtickInterrupt() that
  factorizes code for the tick interrupt that was repeated once per target
  architecture.
- Adapted EDF scheduler to use class Priority
- Improved wakeup time in control based scheduler when waking from the idle
  thread.
- Added ControlScheduler::IRQgetIdleThread()
- Changed IRQwakeThreads(). Now it returns a bool.
- Modified control based scheduler for the introduction of the Priority class
- Added Priority class, so that different schedulers can redefine what priority
  means. Changed public interface of Thread class accordingly.
- Started implementing the EDF scheduler, defined three new member functions
  of the Thread class to be able to manage thread deadlines.
- Added Thread::sleepUntil() to make periodic sleeping more accurate.